@@ -30,10 +30,13 @@
 #ifndef __MAKEJOBS__H__
 #define __MAKEJOBS__H__
 
+#include <list>
+#include <utility>
 #include <vector>
+#include <string>
 #include "vextables.h"
 #include "corrparams.h"
 
-void makeJobs(std::vector<VexJob>& J, VexData *V, const CorrParams *P, int verbose);
+void makeJobs(std::vector<VexJob>& J, VexData *V, const CorrParams *P, std::list<std::pair<int,std::string> > &removedAntennas, int verbose);
 
 #endif
